@@ -5045,8 +5045,6 @@ parameter_list|,
 name|String
 name|defaultHost
 parameter_list|)
-throws|throws
-name|IOException
 block|{
 name|InetSocketAddress
 name|sockAddr
@@ -5056,18 +5054,6 @@ operator|.
 name|createSocketAddr
 argument_list|(
 name|configuredAddress
-argument_list|)
-decl_stmt|;
-name|InetSocketAddress
-name|defaultSockAddr
-init|=
-name|NetUtils
-operator|.
-name|createSocketAddr
-argument_list|(
-name|defaultHost
-operator|+
-literal|":0"
 argument_list|)
 decl_stmt|;
 specifier|final
@@ -5091,32 +5077,6 @@ name|isAnyLocalAddress
 argument_list|()
 condition|)
 block|{
-if|if
-condition|(
-name|UserGroupInformation
-operator|.
-name|isSecurityEnabled
-argument_list|()
-operator|&&
-name|defaultSockAddr
-operator|.
-name|getAddress
-argument_list|()
-operator|.
-name|isAnyLocalAddress
-argument_list|()
-condition|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"Cannot use a wildcard address with security. "
-operator|+
-literal|"Must explicitly set bind address for Kerberos"
-argument_list|)
-throw|;
-block|}
 return|return
 name|defaultHost
 operator|+
